automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- our soon to be beautiful rainbow! -->
     <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
+      <div id="red">
+        <div id="orange">
+          <div id="yellow">
             <div>
               <div>
                 <div></div> <!-- the grandest child div -->
